# load-share-estimation

./: README.md  dependencies.rosinstall
load_share_demo/: params.yaml
load_share_estimation/: CMakeLists.txt  package.xml
load_share_estimation/config/: load_share_estimation_config.yaml
load_share_estimation/include/load_share_estimation/: LoadShareEstimator.h  LoadShareParameters.h
load_share_estimation/launch/: load_share_estimation.launch
load_share_estimation/src/: LoadShareEstimator.cpp  run_load_share_estimator.cpp
load_share_estimation/src/test/: TestParameters.cpp
